# progress-bars

./: .pre-commit-config.yaml  LICENSE  demo.py  main.py  pyproject.toml
src/: bar.py
src/bars/: bar_backend.py  fast_bar.py  fast_bar_new_backend.py  simple_bars.txt
src/bars/backend/: bar.py
src/colors/: color.py  gradient.py  pallete.py  static_color.py
src/colors/types/: __init__.py  base_generator.py  color.py  color_generator.py  color_space.py  color_spaces.py  color_with_bg.py  colors.py  exceptions.py  numeric.py  space.py  validators.py
src/colors/utils/: gen_docstring.py  get_setter_decorator.py
