[project]
name = "progress-bars"
version = "0.1.0"
description = "Some cool progress bars implementations"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright[nodejs]>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B","I"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
